:lipstick: add favicon and fix nav alignments

--- a/src/styles/components/navBar.sass
+++ b/src/styles/components/navBar.sass
@@ -11,7 +11,7 @@
    justify-items: center
    grid-template-areas: 'logo' 'nav' 'social'
    grid-template-rows: 110px auto 30px
-   gap: 4rem
+   gap: 6rem
 
 
    #logo 
@@ -19,6 +19,8 @@
 
    ul 
       margin: 0 auto
+      display: grid
+      gap: .8rem  
 
       li 
          padding: .4rem 0
